[workspace]
members = [
    "programs/coinflip"
    "programs/crash"
    "programs/mines"
    "programs/mines"
    "programs/plinko"
    "programs/memesolt"
    "programs/wheel"

]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bincode = "1.3.3"
solana-program = "1.18.11"
spl-associated-token-account = "2.3.0"

[profile.release]
overflow-checks = true