[package]
name = "crash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bincode = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]